# uni-stuff

year 1 sem 1/: to-do.txt
year 1 sem 2/dsa/LAB4 FR/: LAB4 FR.sln
year 1 sem 2/dsa/LAB5 v1/: LAB5 v1.sln
year 1 sem 2/dsa/actually lab 2/: CMakeLists.txt  ExtendedTest.cpp  IteratedList.cpp  IteratedList.h  ListIterator.cpp  ListIterator.h  node.cpp  node.h
year 1 sem 2/dsa/lab 1 demo 1/: Bag.cpp  DSA lab 1.cpp
year 1 sem 2/dsa/lab 2/untitled/: CMakeLists.txt
year 1 sem 2/dsa/lab3/: ExtendedTest.cpp  MultiMap.cpp  MultiMap.h  MultiMapIterator.cpp  MultiMapIterator.h  ShortTest.cpp
year 1 sem 2/dsa/lab3 v2/: MultiMap.cpp  MultiMap.h  MultiMapIterator.cpp  MultiMapIterator.h  ShortTest.cpp
year 1 sem 2/dsa/lab3 v2 - Copy/: CMakeLists.txt  MultiMap.cpp  MultiMap.h  MultiMapIterator.cpp  MultiMapIterator.h
year 1 sem 2/graphs/TIBU C - GRAPH PW 3/: graph.py  main.py  random_graph1.txt  service.py  test1.txt  test9.txt  ui.py  written.txt
year 1 sem 2/graphs/TIBU C - GRAPH PW 4/: Documentation.odt  graph.py  service.py  test123.txt  test2.txt  ui.py
year 2 sem 1/: to-do.txt
year 2 sem 1/cn/pythonProject2/: broadcastin.py  main.py  plm123.py  task2.py  udpbroadcast.py
year 2 sem 1/plf/graph coloring/: graph text example.txt  jCCYArao.pl
year 2 sem 2/ai/lab2/: AI_lab2_2024_TIBU_CRISTIAN (1).ipynb
year 2 sem 2/ai/lab3 features-iris/: Lab3_AI_2023_unsolved_TIBU_CRISTIAN.ipynb
year 2 sem 2/ai/lab4 ann-simple perceptron/: AI_lab_4_2023-unsolved 2 1 solved.ipynb
year 2 sem 2/ai/lab5 multilayer perceptron/: AI_lab_5_2023.ipynb
(+398 files in other folders)
